samples/_failures_safe/1761413379_4e798c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab18b777.c: In function ‘main’:
./samples/SAFE/__tmp_ab18b777.c:152:20: error: expected ‘;’ at end of input
  152 |     cleanup_context
      |                    ^
      |                    ;
./samples/SAFE/__tmp_ab18b777.c:152:5: error: expected declaration or statement at end of input
  152 |     cleanup_context
      |     ^~~~~~~~~~~~~~~
